--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/radfish.ico" />
+    <link rel="icon" type="image/x-icon" href="/icons/radfish.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Radfish React App" />
-    <link rel="apple-touch-icon" href="/radfish.png" />
+    <link rel="apple-touch-icon" href="/icons/radfish.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
